--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
     <meta property="og:title" content="Tastelog" />
-    <meta property="og:description" content="Track, review, and share your taste across films, anime, books, and TV. Follow friends, build a watchlist, and log your recent activity." />
+    <meta property="og:description" content="Track, review, and share your taste across films, animation, books, and TV. Follow friends, build a watchlist, and log your recent activity." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="Tastelog" />
-    <meta name="twitter:description" content="Track, review, and share your taste across films, anime, books, and TV. Follow friends, build a watchlist, and log your recent activity." />
+    <meta name="twitter:description" content="Track, review, and share your taste across films, animation, books, and TV. Follow friends, build a watchlist, and log your recent activity." />
     <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
